--- a/Use.ipynb
+++ b/Use.ipynb
@@ -20,13 +20,35 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "io-WTWsXm0nr"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "io-WTWsXm0nr",
+        "outputId": "b90214a5-762e-4b8e-e30c-f1bb02c5230d"
       },
       "source": [
         "!pip install -Uq transformers rich[jupyter] sentencepiece gdown flask-ngrok"
       ],
-      "execution_count": 2,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\u001b[K     |████████████████████████████████| 2.6 MB 5.1 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 209 kB 67.2 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 1.2 MB 58.7 MB/s \n",
+            "\u001b[?25h  Installing build dependencies ... \u001b[?25l\u001b[?25hdone\n",
+            "  Getting requirements to build wheel ... \u001b[?25l\u001b[?25hdone\n",
+            "    Preparing wheel metadata ... \u001b[?25l\u001b[?25hdone\n",
+            "\u001b[K     |████████████████████████████████| 895 kB 55.2 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 636 kB 75.8 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 3.3 MB 68.8 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 51 kB 8.8 MB/s \n",
+            "\u001b[?25h  Building wheel for gdown (PEP 517) ... \u001b[?25l\u001b[?25hdone\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -44,7 +66,7 @@
         "\n",
         "OUTPUT_DIR = 'output_dir'"
       ],
-      "execution_count": 56,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -66,7 +88,7 @@
         "from torch.utils.data import Dataset, DataLoader, RandomSampler, SequentialSampler\n",
         "from transformers import T5Tokenizer, T5ForConditionalGeneration"
       ],
-      "execution_count": 57,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -76,14 +98,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "RWLs6S7dnYmC",
-        "outputId": "6f6105f2-4044-49a7-f6f0-2c0074f1e0b2"
+        "outputId": "2430df6b-9449-4a86-b299-1d7220566b4f"
       },
       "source": [
         "!gdown https://drive.google.com/uc?id=1ekYuFbcJnpwMT5CcIxgaOc6hprBen9ij\n",
         "!gdown https://drive.google.com/uc?id=1a4WdZyQ5zdJ_S7oGdJUMLR-zqW8FwkKx\n",
         "!tar xvf model.tar.gz"
       ],
-      "execution_count": 74,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -91,22 +113,11 @@
             "Downloading...\n",
             "From: https://drive.google.com/uc?id=1ekYuFbcJnpwMT5CcIxgaOc6hprBen9ij\n",
             "To: /content/model.tar.gz\n",
-            "905MB [00:03, 260MB/s]\n",
+            "905MB [00:04, 202MB/s]\n",
             "Downloading...\n",
             "From: https://drive.google.com/uc?id=1a4WdZyQ5zdJ_S7oGdJUMLR-zqW8FwkKx\n",
             "To: /content/tfidf.pickle\n",
-            "5.35MB [00:00, 250MB/s]\n",
-            "--2021-08-21 23:49:34--  https://raw.githubusercontent.com/sevskii111/one-hot-gen/main/frontend/index.html\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
-            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
-            "HTTP request sent, awaiting response... 200 OK\n",
-            "Length: 1095527 (1.0M) [text/plain]\n",
-            "Saving to: ‘index.html’\n",
-            "\n",
-            "index.html          100%[===================>]   1.04M  --.-KB/s    in 0.02s   \n",
-            "\n",
-            "2021-08-21 23:49:34 (58.1 MB/s) - ‘index.html’ saved [1095527/1095527]\n",
-            "\n",
+            "5.35MB [00:00, 126MB/s]\n",
             "output_dir/model_files/\n",
             "output_dir/model_files/config.json\n",
             "output_dir/model_files/spiece.model\n",
@@ -160,18 +171,7 @@
         "      \n",
         "    return results"
       ],
-      "execution_count": 59,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "BklgoSAasIZq"
-      },
-      "source": [
-        "!wget https://github.com/sevskii111/one-hot-gen/blob/main/datasets/dataset_valid.csv?raw=true -O dataset_valid.csv -q"
-      ],
-      "execution_count": 60,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -212,7 +212,7 @@
         "              break\n",
         "  return pd.DataFrame(result)"
       ],
-      "execution_count": 61,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -222,7 +222,7 @@
       },
       "source": [
         "def predict_t5(df):\n",
-        "  preds = generate(valid_df[\"X\"].values)\n",
+        "  preds = generate(df[\"X\"].values)\n",
         "  with open('./tfidf.pickle', 'rb') as handle:\n",
         "    tfidf = pickle.load(handle)\n",
         "  predictions = pd.DataFrame()\n",
@@ -255,7 +255,7 @@
         "\n",
         "  return pd.DataFrame(dl_results, columns=[\"result\", \"title\"])"
       ],
-      "execution_count": 63,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -279,7 +279,7 @@
         "\n",
         "  return pd.DataFrame(result, columns=[\"story_id\", \"story_name\"])"
       ],
-      "execution_count": 64,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -289,38 +289,38 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "w6WbagfiOFAA",
-        "outputId": "67bea8c2-f080-445b-ed84-2224bd9ce4d0"
+        "outputId": "573adbe5-767e-4d65-e479-1db72c09821e"
       },
       "source": [
-        "!wget https://raw.githubusercontent.com/sevskii111/one-hot-gen/main/frontend/index.html?y -O index.html\n",
-        "!wget https://raw.githubusercontent.com/sevskii111/one-hot-gen/main/frontend/main.js?y -O main.js"
+        "!wget https://raw.githubusercontent.com/sevskii111/one-hot-gen/main/frontend/index.html -O index.html\n",
+        "!wget https://raw.githubusercontent.com/sevskii111/one-hot-gen/main/frontend/main.js -O main.js"
       ],
-      "execution_count": 130,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "--2021-08-22 01:11:51--  https://raw.githubusercontent.com/sevskii111/one-hot-gen/main/frontend/index.html?y\n",
+            "--2021-08-22 06:39:01--  https://raw.githubusercontent.com/sevskii111/one-hot-gen/main/frontend/index.html\n",
             "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
             "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
-            "Length: 9309 (9.1K) [text/plain]\n",
+            "Length: 9507 (9.3K) [text/plain]\n",
             "Saving to: ‘index.html’\n",
             "\n",
-            "\rindex.html            0%[                    ]       0  --.-KB/s               \rindex.html          100%[===================>]   9.09K  --.-KB/s    in 0s      \n",
+            "\rindex.html            0%[                    ]       0  --.-KB/s               \rindex.html          100%[===================>]   9.28K  --.-KB/s    in 0s      \n",
             "\n",
-            "2021-08-22 01:11:51 (75.0 MB/s) - ‘index.html’ saved [9309/9309]\n",
+            "2021-08-22 06:39:01 (93.9 MB/s) - ‘index.html’ saved [9507/9507]\n",
             "\n",
-            "--2021-08-22 01:11:51--  https://raw.githubusercontent.com/sevskii111/one-hot-gen/main/frontend/main.js?y\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
-            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
+            "--2021-08-22 06:39:01--  https://raw.githubusercontent.com/sevskii111/one-hot-gen/main/frontend/main.js\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.111.133, 185.199.108.133, 185.199.109.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.111.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
-            "Length: 1037372 (1013K) [text/plain]\n",
+            "Length: 1038661 (1014K) [text/plain]\n",
             "Saving to: ‘main.js’\n",
             "\n",
-            "main.js             100%[===================>]   1013K  --.-KB/s    in 0.02s   \n",
+            "main.js             100%[===================>]   1014K  --.-KB/s    in 0.05s   \n",
             "\n",
-            "2021-08-22 01:11:51 (51.0 MB/s) - ‘main.js’ saved [1037372/1037372]\n",
+            "2021-08-22 06:39:01 (20.8 MB/s) - ‘main.js’ saved [1038661/1038661]\n",
             "\n"
           ],
           "name": "stdout"
@@ -334,7 +334,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Y72ciqZv64rd",
-        "outputId": "d2313533-91bc-4aa6-c5e8-6fb5b29d1069"
+        "outputId": "eee209de-2a56-4dfa-cc8c-644aebfe04a9"
       },
       "source": [
         "import sys\n",
@@ -385,7 +385,7 @@
         {
           "output_type": "stream",
           "text": [
-            " * Running on http://5a7e-35-204-100-20.ngrok.io\n",
+            " * Running on http://43b4-34-74-84-28.ngrok.io\n",
             " * Traffic stats available on http://127.0.0.1:4040\n"
           ],
           "name": "stdout"
@@ -393,54 +393,19 @@
         {
           "output_type": "stream",
           "text": [
-            "127.0.0.1 - - [22/Aug/2021 01:11:57] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-            "127.0.0.1 - - [22/Aug/2021 01:11:57] \"\u001b[37mGET /main.js HTTP/1.1\u001b[0m\" 200 -\n",
-            "127.0.0.1 - - [22/Aug/2021 01:11:59] \"\u001b[33mGET /favicon.ico HTTP/1.1\u001b[0m\" 404 -\n",
-            "127.0.0.1 - - [22/Aug/2021 01:12:56] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-            "127.0.0.1 - - [22/Aug/2021 01:12:57] \"\u001b[37mGET /main.js HTTP/1.1\u001b[0m\" 200 -\n",
+            "127.0.0.1 - - [22/Aug/2021 06:40:11] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+            "127.0.0.1 - - [22/Aug/2021 06:40:11] \"\u001b[37mGET /main.js HTTP/1.1\u001b[0m\" 200 -\n",
+            "127.0.0.1 - - [22/Aug/2021 06:40:12] \"\u001b[33mGET /favicon.ico HTTP/1.1\u001b[0m\" 404 -\n",
+            "/usr/local/lib/python3.7/dist-packages/torch/_tensor.py:575: UserWarning: floor_divide is deprecated, and will be removed in a future version of pytorch. It currently rounds toward 0 (like the 'trunc' function NOT 'floor'). This results in incorrect rounding for negative values.\n",
+            "To keep the current behavior, use torch.div(a, b, rounding_mode='trunc'), or for actual floor division, use torch.div(a, b, rounding_mode='floor'). (Triggered internally at  /pytorch/aten/src/ATen/native/BinaryOps.cpp:467.)\n",
+            "  return torch.floor_divide(self, other)\n",
             "/usr/local/lib/python3.7/dist-packages/sklearn/feature_extraction/text.py:385: UserWarning: Your stop_words may be inconsistent with your preprocessing. Tokenizing the stop words generated tokens ['хотел'] not in stop_words.\n",
             "  'stop_words.' % sorted(inconsistent))\n",
-            "127.0.0.1 - - [22/Aug/2021 01:13:18] \"\u001b[37mPOST /get_preds HTTP/1.1\u001b[0m\" 200 -\n",
-            "127.0.0.1 - - [22/Aug/2021 01:13:54] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-            "127.0.0.1 - - [22/Aug/2021 01:13:55] \"\u001b[37mGET /main.js HTTP/1.1\u001b[0m\" 200 -\n",
-            "127.0.0.1 - - [22/Aug/2021 01:13:57] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-            "127.0.0.1 - - [22/Aug/2021 01:13:58] \"\u001b[37mGET /main.js HTTP/1.1\u001b[0m\" 200 -\n",
+            "127.0.0.1 - - [22/Aug/2021 06:40:32] \"\u001b[37mPOST /get_preds HTTP/1.1\u001b[0m\" 200 -\n",
+            "127.0.0.1 - - [22/Aug/2021 06:47:36] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
             "/usr/local/lib/python3.7/dist-packages/sklearn/feature_extraction/text.py:385: UserWarning: Your stop_words may be inconsistent with your preprocessing. Tokenizing the stop words generated tokens ['хотел'] not in stop_words.\n",
             "  'stop_words.' % sorted(inconsistent))\n",
-            "127.0.0.1 - - [22/Aug/2021 01:14:23] \"\u001b[37mPOST /get_preds HTTP/1.1\u001b[0m\" 200 -\n",
-            "127.0.0.1 - - [22/Aug/2021 01:15:19] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-            "127.0.0.1 - - [22/Aug/2021 01:15:19] \"\u001b[37mGET /main.js HTTP/1.1\u001b[0m\" 200 -\n",
-            "/usr/local/lib/python3.7/dist-packages/sklearn/feature_extraction/text.py:385: UserWarning: Your stop_words may be inconsistent with your preprocessing. Tokenizing the stop words generated tokens ['хотел'] not in stop_words.\n",
-            "  'stop_words.' % sorted(inconsistent))\n",
-            "127.0.0.1 - - [22/Aug/2021 01:15:40] \"\u001b[37mPOST /get_preds HTTP/1.1\u001b[0m\" 200 -\n",
-            "127.0.0.1 - - [22/Aug/2021 01:16:30] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-            "127.0.0.1 - - [22/Aug/2021 01:16:30] \"\u001b[37mGET /main.js HTTP/1.1\u001b[0m\" 200 -\n",
-            "/usr/local/lib/python3.7/dist-packages/sklearn/feature_extraction/text.py:385: UserWarning: Your stop_words may be inconsistent with your preprocessing. Tokenizing the stop words generated tokens ['хотел'] not in stop_words.\n",
-            "  'stop_words.' % sorted(inconsistent))\n",
-            "127.0.0.1 - - [22/Aug/2021 01:16:50] \"\u001b[37mPOST /get_preds HTTP/1.1\u001b[0m\" 200 -\n",
-            "127.0.0.1 - - [22/Aug/2021 01:17:00] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-            "127.0.0.1 - - [22/Aug/2021 01:17:00] \"\u001b[37mGET /main.js HTTP/1.1\u001b[0m\" 200 -\n",
-            "/usr/local/lib/python3.7/dist-packages/sklearn/feature_extraction/text.py:385: UserWarning: Your stop_words may be inconsistent with your preprocessing. Tokenizing the stop words generated tokens ['хотел'] not in stop_words.\n",
-            "  'stop_words.' % sorted(inconsistent))\n",
-            "127.0.0.1 - - [22/Aug/2021 01:17:21] \"\u001b[37mPOST /get_preds HTTP/1.1\u001b[0m\" 200 -\n",
-            "127.0.0.1 - - [22/Aug/2021 01:18:19] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-            "127.0.0.1 - - [22/Aug/2021 01:18:19] \"\u001b[37mGET /main.js HTTP/1.1\u001b[0m\" 200 -\n",
-            "/usr/local/lib/python3.7/dist-packages/sklearn/feature_extraction/text.py:385: UserWarning: Your stop_words may be inconsistent with your preprocessing. Tokenizing the stop words generated tokens ['хотел'] not in stop_words.\n",
-            "  'stop_words.' % sorted(inconsistent))\n",
-            "127.0.0.1 - - [22/Aug/2021 01:18:43] \"\u001b[37mPOST /get_preds HTTP/1.1\u001b[0m\" 200 -\n",
-            "127.0.0.1 - - [22/Aug/2021 01:19:36] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-            "127.0.0.1 - - [22/Aug/2021 01:19:36] \"\u001b[37mGET /main.js HTTP/1.1\u001b[0m\" 200 -\n",
-            "/usr/local/lib/python3.7/dist-packages/sklearn/feature_extraction/text.py:385: UserWarning: Your stop_words may be inconsistent with your preprocessing. Tokenizing the stop words generated tokens ['хотел'] not in stop_words.\n",
-            "  'stop_words.' % sorted(inconsistent))\n",
-            "127.0.0.1 - - [22/Aug/2021 01:19:56] \"\u001b[37mPOST /get_preds HTTP/1.1\u001b[0m\" 200 -\n",
-            "127.0.0.1 - - [22/Aug/2021 01:20:14] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-            "127.0.0.1 - - [22/Aug/2021 01:20:15] \"\u001b[37mGET /main.js HTTP/1.1\u001b[0m\" 200 -\n",
-            "/usr/local/lib/python3.7/dist-packages/sklearn/feature_extraction/text.py:385: UserWarning: Your stop_words may be inconsistent with your preprocessing. Tokenizing the stop words generated tokens ['хотел'] not in stop_words.\n",
-            "  'stop_words.' % sorted(inconsistent))\n",
-            "127.0.0.1 - - [22/Aug/2021 01:20:47] \"\u001b[37mPOST /get_preds HTTP/1.1\u001b[0m\" 200 -\n",
-            "/usr/local/lib/python3.7/dist-packages/sklearn/feature_extraction/text.py:385: UserWarning: Your stop_words may be inconsistent with your preprocessing. Tokenizing the stop words generated tokens ['хотел'] not in stop_words.\n",
-            "  'stop_words.' % sorted(inconsistent))\n",
-            "127.0.0.1 - - [22/Aug/2021 01:20:51] \"\u001b[37mPOST /get_preds HTTP/1.1\u001b[0m\" 200 -\n"
+            "127.0.0.1 - - [22/Aug/2021 06:47:55] \"\u001b[37mPOST /get_preds HTTP/1.1\u001b[0m\" 200 -\n"
           ],
           "name": "stderr"
         }
